PR/44959: Henning Petersen: glob forgets to closedir on out of space condition.